# webgrab

./: Cargo.toml  README.md
docs/: 00-investigation-plan.md  01-measurement-report.md  02-research-plan.md  03-research-report.md  04-design.md  05-implementation-plan.md  06-verification-plan.md  07-verification-report.md
docs/_quality/: IMPROVEMENT_BACKLOG.md  QUALITY_RUBRIC.md  SELF_REVIEW_LOG.md  STYLE_GUIDE.md
examples/: smoke.rs
samples/: README.md
samples/skills/claude/webgrab/: SKILL.md
samples/skills/codex/: AGENTS.md
samples/skills/kimi/: webgrab-tool.md
scripts/security-verify/: injection_page.py  run.sh
src/: budget.rs  cli.rs  convert.rs  decode.rs  error.rs  extract.rs  fetch.rs  lib.rs  main.rs  netguard.rs  output.rs  pipeline.rs  render.rs  renderproxy.rs  robots.rs  tokens.rs
tests/: integration.rs
tools/: doclint.py
