[package]
name = "webgrab"
version = "0.1.0"
edition = "2024"

[dependencies]
chardetng = "1.0.0"
chromiumoxide = "0.9.1"
clap = { version = "4.6.2", features = ["derive"] }
dom_smoothie = "0.18.0"
encoding_rs = "0.8.35"
futures = "0.3.32"
htmd = "0.5.4"
reqwest = { version = "0.13.4", features = ["gzip", "brotli", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
tiktoken-rs = "0.12.0"
tokio = { version = "1.53.0", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
url = "2.5.8"
